# github-content-searcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml  update-catalog.yml
claude-code/github-content-searcher/.claude-plugin/: plugin.json
claude-code/github-content-searcher/skills/search/: SKILL.md
data/: catalog.json  catalog.md
docs/: CLAUDE_CODE.md  DEMO.md  PUBLISHING.md  SCORING.md  VERSIONING.md  index.html
examples/: candidates.json  recommendations.md
skills/github-content-searcher/: SKILL.md
skills/github-content-searcher/agents/: openai.yaml
skills/github-content-searcher/references/: local-llm.md  query-patterns.md  scoring.md  security.md
src/github_content_searcher/: __init__.py  __main__.py  api.py  catalog.py  cli.py  llm.py  ranking.py  readme.py  reports.py  site.py
tests/: test_api.py  test_catalog.py  test_claude_code_plugin.py  test_cli.py  test_llm.py  test_ranking.py  test_readme.py  test_reports.py  test_site.py  test_skill_metadata.py  test_versioning.py  test_workflow.py
